@@ -13,40 +13,44 @@ import com.example.SpringApi.Models.ResponseModels.TestRunResponseModel;
 import com.example.SpringApi.Repositories.LatestTestResultRepository;
 import com.example.SpringApi.Repositories.TestRunRepository;
 import com.example.SpringApi.Services.Interface.IQASubTranslator;
-import com.example.SpringApi.Services.Interface.ITestExecutorService;
 import com.example.SpringApi.ErrorMessages;
 import com.example.SpringApi.Exceptions.BadRequestException;
 import com.example.SpringApi.Exceptions.NotFoundException;
 import com.example.SpringApi.Logging.ContextualLogger;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 /**
  * Service class for QA endpoint-to-test mapping operations.
- * 
+ *
  * This service provides comprehensive information about all public service
  * methods
  * and their associated unit tests. It uses reflection to dynamically scan
  * service
  * classes and reads test source files from the filesystem to match test methods
  * to service methods based on naming conventions.
- * 
+ *
  * Test method naming convention: methodName_Result_Outcome
  * Example: toggleAddress_AddressNotFound_ThrowsNotFoundException
- * 
+ *
  * @author SpringApi Team
  * @version 1.0
  * @since 2024-01-15
@@ -70,6 +74,17 @@ public class QAService extends BaseService implements IQASubTranslator {
     // Service-to-Controller mapping for API routes
     private static final Map<String, ServiceControllerMapping> SERVICE_MAPPINGS = new LinkedHashMap<>();
 
+    // Test execution tracking (moved from TestExecutorService)
+    private static final Map<String, TestExecutionStatusModel> activeExecutions = new ConcurrentHashMap<>();
+    private static final Map<String, Process> runningProcesses = new ConcurrentHashMap<>();
+
+    private static final Pattern TESTS_RUN_PATTERN = Pattern.compile(
+            "Tests run: (\\d+), Failures: (\\d+), Errors: (\\d+), Skipped: (\\d+)"
+    );
+    private static final Pattern RUNNING_TEST_CLASS_PATTERN = Pattern.compile(
+            "Running ([\\w.]+Test)"
+    );
+
     static {
         // Initialize service mappings with controller and base path information
         SERVICE_MAPPINGS.put("AddressService",
@@ -92,6 +107,8 @@ public class QAService extends BaseService implements IQASubTranslator {
                 new ServiceControllerMapping("ProductController", "/api/Product", "ProductServiceTest"));
         SERVICE_MAPPINGS.put("ProductReviewService", new ServiceControllerMapping("ProductReviewController",
                 "/api/ProductReview", "ProductReviewServiceTest"));
+        SERVICE_MAPPINGS.put("QAService",
+            new ServiceControllerMapping("QAController", "/api/QA", "QAServiceTest"));
         SERVICE_MAPPINGS.put("PromoService",
                 new ServiceControllerMapping("PromoController", "/api/Promo", "PromoServiceTest"));
         SERVICE_MAPPINGS.put("PurchaseOrderService", new ServiceControllerMapping("PurchaseOrderController",
@@ -118,15 +135,12 @@ public class QAService extends BaseService implements IQASubTranslator {
 
     private final TestRunRepository testRunRepository;
     private final LatestTestResultRepository latestTestResultRepository;
-    private final ITestExecutorService testExecutorService;
 
     @Autowired
     public QAService(TestRunRepository testRunRepository,
-            LatestTestResultRepository latestTestResultRepository,
-            ITestExecutorService testExecutorService) {
+                     LatestTestResultRepository latestTestResultRepository) {
         this.testRunRepository = testRunRepository;
         this.latestTestResultRepository = latestTestResultRepository;
-        this.testExecutorService = testExecutorService;
     }
 
     /**
@@ -178,7 +192,7 @@ public class QAService extends BaseService implements IQASubTranslator {
      * Returns all QA dashboard data in a single response.
      * Includes services with methods/tests, coverage summary, and available
      * services.
-     * 
+     *
      * @return QADashboardResponseModel with all dashboard data
      */
     @Override
@@ -223,7 +237,7 @@ public class QAService extends BaseService implements IQASubTranslator {
     /**
      * Returns a comprehensive list of all services with their public methods and
      * associated unit tests.
-     * 
+     *
      * @return List of QAResponseModel with full endpoint-to-test mapping
      */
     @Override
@@ -245,7 +259,7 @@ public class QAService extends BaseService implements IQASubTranslator {
 
     /**
      * Returns endpoint-to-test mapping for a specific service.
-     * 
+     *
      * @param serviceName The name of the service (e.g., "AddressService",
      *                    "UserService", or just "Address")
      * @return QAResponseModel for the specified service
@@ -253,16 +267,17 @@ public class QAService extends BaseService implements IQASubTranslator {
      */
     @Override
     public QAResponseModel getEndpointsWithTestsByService(String serviceName) {
+        String trimmedServiceName = serviceName.trim();
         // Normalize service name (add "Service" suffix if not present)
-        String normalizedServiceName = serviceName;
-        if (!serviceName.endsWith("Service")) {
-            normalizedServiceName = serviceName + "Service";
+        String normalizedServiceName = trimmedServiceName;
+        if (!trimmedServiceName.endsWith("Service")) {
+            normalizedServiceName = trimmedServiceName + "Service";
         }
 
         ServiceControllerMapping mapping = SERVICE_MAPPINGS.get(normalizedServiceName);
         if (mapping == null) {
             throw new NotFoundException(String.format(ErrorMessages.QAErrorMessages.ServiceNotFoundFormat,
-                    serviceName, String.join(", ", SERVICE_MAPPINGS.keySet())));
+                    trimmedServiceName, String.join(", ", SERVICE_MAPPINGS.keySet())));
         }
 
         QAResponseModel serviceInfo = buildServiceInfo(normalizedServiceName, mapping);
@@ -275,7 +290,7 @@ public class QAService extends BaseService implements IQASubTranslator {
 
     /**
      * Returns a summary of test coverage across all services.
-     * 
+     *
      * @return Map containing coverage statistics
      */
     @Override
@@ -326,18 +341,18 @@ public class QAService extends BaseService implements IQASubTranslator {
 
     /**
      * Returns a list of all available service names.
-     * 
+     *
      * @return List of service names
      */
     @Override
     public List<String> getAvailableServices() {
-        return new ArrayList<>(SERVICE_MAPPINGS.keySet());
+        return java.util.Collections.unmodifiableList(new ArrayList<>(SERVICE_MAPPINGS.keySet()));
     }
 
     /**
      * Builds a QAResponseModel for a given service using reflection for service
      * class and filesystem scanning for test files.
-     * 
+     *
      * @param serviceName The name of the service class
      * @param mapping     The controller mapping information
      * @return QAResponseModel with method and test information, or null if class not found
@@ -392,7 +407,7 @@ public class QAService extends BaseService implements IQASubTranslator {
      * Reads test methods from a test source file by parsing the Java source code.
      * This method scans the filesystem for the test file and extracts @Test methods
      * along with their @DisplayName annotations.
-     * 
+     *
      * @param testClassName The name of the test class file (without .java extension)
      * @return List of TestMethodInfo containing method names and display names
      */
@@ -602,7 +617,7 @@ public class QAService extends BaseService implements IQASubTranslator {
         }
 
         // Fallback: single value form without braces, e.g. strings = "abc" or ints = 1
-        Matcher m = Pattern.compile("=\\s*([^,\\)]+)").matcher(valueSourceAnnotation);
+        Matcher m = Pattern.compile("=\\s*([^,)]+)").matcher(valueSourceAnnotation);
         if (m.find()) {
             String val = m.group(1).trim();
             return val.isEmpty() ? 0 : 1;
@@ -704,14 +719,14 @@ public class QAService extends BaseService implements IQASubTranslator {
     /**
      * Finds unit test methods that are associated with a given service method.
      * Tests are matched based on naming convention: methodName_Result_Outcome
-     * 
+     *
      * @param methodName       The service method name to find tests for
      * @param allTestMethods   List of all test method info objects
      * @param latestResultsMap Map of test method name to latest test result
      * @return List of TestInfo that are associated with the service method
      */
     private List<QAResponseModel.TestInfo> findAssociatedTests(String methodName, List<TestMethodInfo> allTestMethods,
-            Map<String, LatestTestResult> latestResultsMap) {
+                                                               Map<String, LatestTestResult> latestResultsMap) {
         List<QAResponseModel.TestInfo> associatedTests = new ArrayList<>();
 
         for (TestMethodInfo testInfo : allTestMethods) {
@@ -748,7 +763,7 @@ public class QAService extends BaseService implements IQASubTranslator {
     /**
      * Extracts a description from a method name by converting camelCase to readable
      * format.
-     * 
+     *
      * @param method The method to extract description for
      * @return A human-readable description string
      */
@@ -774,7 +789,7 @@ public class QAService extends BaseService implements IQASubTranslator {
     /**
      * Saves a test run with its individual results.
      * Also updates the LatestTestResult table for each test.
-     * 
+     *
      * @param request The test run request containing service info and results
      * @return TestRunResponseModel with the saved test run data
      */
@@ -842,7 +857,7 @@ public class QAService extends BaseService implements IQASubTranslator {
 
     /**
      * Returns the latest test results for a service or all services.
-     * 
+     *
      * @param serviceName The service name to filter by (null or empty for all
      *                    services)
      * @return List of LatestTestResultResponseModel
@@ -873,7 +888,7 @@ public class QAService extends BaseService implements IQASubTranslator {
      * Updates or creates a LatestTestResult entry for a test.
      */
     private void upsertLatestTestResult(TestRunResult result, Long testRunId, Long userId,
-            String userName, Long clientId) {
+                                        String userName, Long clientId) {
         Optional<LatestTestResult> existingOpt = latestTestResultRepository
                 .findByClientIdAndServiceNameAndTestClassNameAndTestMethodName(
                         clientId, result.getServiceName(), result.getTestClassName(), result.getTestMethodName());
@@ -904,7 +919,7 @@ public class QAService extends BaseService implements IQASubTranslator {
     /**
      * Starts an async test execution using Maven.
      * Returns immediately with status object for polling.
-     * 
+     *
      * @param request The test execution request
      * @return TestExecutionStatusModel with executionId and initial status
      */
@@ -948,7 +963,7 @@ public class QAService extends BaseService implements IQASubTranslator {
             // resolve to the declaring nested class so surefire can actually find the test.
             if (request.getTestNames().size() == 1 && !testClassName.contains("$")) {
                 String resolvedClass = resolveDeclaringTestClassForTestMethod(testClassName,
-                        executableTestNames.get(0));
+                        executableTestNames.getFirst());
                 if (resolvedClass != null && resolvedClass.contains("$")) {
                     testClassName = resolvedClass;
                 }
@@ -1016,7 +1031,7 @@ public class QAService extends BaseService implements IQASubTranslator {
                 testClassName = declaringClass;
             } else if (associatedTests.size() == 1 && !testClassName.contains("$")) {
                 // Single test - resolve its declaring class
-                String resolvedClass = associatedTests.get(0).getDeclaringTestClassName();
+                String resolvedClass = associatedTests.getFirst().getDeclaringTestClassName();
                 if (resolvedClass != null && resolvedClass.contains("$")) {
                     testClassName = resolvedClass;
                 }
@@ -1035,11 +1050,11 @@ public class QAService extends BaseService implements IQASubTranslator {
         TestExecutionStatusModel status = new TestExecutionStatusModel(executionId, serviceName,
                 request.getMethodName(), expectedTestCount);
 
-        // Store in TestExecutorService (separate service so @Async works)
-        testExecutorService.storeStatus(executionId, status);
+        // Store status
+        storeStatus(executionId, status);
 
-        // Start async execution in separate service (returns immediately)
-        testExecutorService.executeTestsAsync(executionId, testClassName, testMethodFilter, serviceName);
+        // Start async execution (returns immediately)
+        executeTestsAsync(executionId, testClassName, testMethodFilter, serviceName);
 
         return status;
     }
@@ -1076,7 +1091,7 @@ public class QAService extends BaseService implements IQASubTranslator {
         if (testName == null) {
             return null;
         }
-        return testName.replaceAll("\\([^)]*\\)\\[\\d+\\]$", "");
+        return testName.replaceAll("\\([^)]*\\)\\[\\d+]$", "");
     }
 
     /**
@@ -1133,11 +1148,290 @@ public class QAService extends BaseService implements IQASubTranslator {
      */
     @Override
     public TestExecutionStatusModel getTestExecutionStatus(String executionId) {
-        TestExecutionStatusModel status = testExecutorService.getStatus(executionId);
+        if (executionId == null) {
+            throw new NotFoundException(
+                    String.format(ErrorMessages.QAErrorMessages.TestExecutionNotFoundFormat, executionId));
+        }
+        TestExecutionStatusModel status = getStatus(executionId);
         if (status == null) {
             throw new NotFoundException(String.format(ErrorMessages.QAErrorMessages.TestExecutionNotFoundFormat, executionId));
         }
         return status;
+    }
+
+    // ==================== TEST EXECUTOR METHODS (moved from TestExecutorService) ====================
+
+    /**
+     * Gets existing status for an execution, or creates a new PENDING status if none exists.
+     */
+    @SuppressWarnings("unused")
+    private TestExecutionStatusModel getOrCreateStatus(String executionId) {
+        return activeExecutions.computeIfAbsent(executionId, TestExecutionStatusModel::new);
+    }
+
+    /**
+     * Stores or overwrites the status for an execution.
+     */
+    private void storeStatus(String executionId, TestExecutionStatusModel status) {
+        activeExecutions.put(executionId, status);
+    }
+
+    /**
+     * Sets the expected total test count for an execution.
+     */
+    @SuppressWarnings("unused")
+    private void setExpectedTestCount(String executionId, int expectedCount) {
+        TestExecutionStatusModel status = activeExecutions.get(executionId);
+        if (status != null) {
+            status.setTotalTests(expectedCount);
+        }
+    }
+
+    /**
+     * Gets the current status for an execution.
+     * For RUNNING status, returns a snapshot with time-based progress estimation.
+     */
+    private TestExecutionStatusModel getStatus(String executionId) {
+        TestExecutionStatusModel status = activeExecutions.get(executionId);
+        if (status == null) {
+            return null;
+        }
+
+        if ("RUNNING".equals(status.getStatus())
+                && status.getStartedAt() != null
+                && status.getTotalTests() > 0
+                && status.getCompletedTests() < status.getTotalTests()) {
+            long elapsedMs = java.time.Duration.between(status.getStartedAt(), LocalDateTime.now()).toMillis();
+            int totalTests = status.getTotalTests();
+            int maxWhileRunning = Math.max(0, totalTests - 1);
+            int actualCompletedClamped = Math.min(status.getCompletedTests(), maxWhileRunning);
+            long expectedDurationMs = 2000L + (long) totalTests * 400L;
+            double ratio = expectedDurationMs > 0
+                    ? Math.min(0.95d, (double) elapsedMs / (double) expectedDurationMs)
+                    : 0.0d;
+            int estimatedCompleted = (int) Math.floor(ratio * totalTests);
+            int smoothedCompleted = Math.max(actualCompletedClamped, Math.min(maxWhileRunning, Math.max(0, estimatedCompleted)));
+
+            return TestExecutionStatusModel.createProgressSnapshot(status, totalTests, smoothedCompleted, elapsedMs);
+        }
+
+        return status;
+    }
+
+    /**
+     * Starts asynchronous test execution via Maven. Returns immediately; tests run in background.
+     */
+    @Async("asyncExecutor")
+    protected void executeTestsAsync(String executionId, String testClassName, String testMethodFilter, String serviceName) {
+        TestExecutionStatusModel status = activeExecutions.get(executionId);
+        if (status == null) {
+            return;
+        }
+
+        status.setStatus("RUNNING");
+        long startTime = System.currentTimeMillis();
+
+        try {
+            List<String> command = buildMavenCommand(testClassName, testMethodFilter);
+            Path projectDir = findProjectDirectory();
+            Process process = new ProcessBuilder(command)
+                    .directory(projectDir.toFile())
+                    .redirectErrorStream(true)
+                    .start();
+
+            runningProcesses.put(executionId, process);
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    parseTestOutput(line, status);
+                    Matcher runningMatcher = RUNNING_TEST_CLASS_PATTERN.matcher(line);
+                    if (runningMatcher.find()) {
+                        status.setStatus("RUNNING");
+                    }
+                }
+            }
+
+            int exitCode = process.waitFor();
+            runningProcesses.remove(executionId);
+
+            parseSurefireReports(status, projectDir, testClassName);
+
+            status.setDurationMs(System.currentTimeMillis() - startTime);
+            status.setCompletedAt(LocalDateTime.now());
+            status.setStatus(exitCode == 0 ? "COMPLETED" : "COMPLETED_WITH_FAILURES");
+
+            if (exitCode != 0 && status.getResults().isEmpty()) {
+                status.setErrorMessage(String.format(ErrorMessages.TestExecutorErrorMessages.TestsFailedExitCodeFormat, exitCode));
+            }
+
+        } catch (IOException e) {
+            markExecutionFailed(executionId, status, startTime, String.format(ErrorMessages.TestExecutorErrorMessages.IoErrorDuringExecutionFormat, e.getMessage()));
+            throw new RuntimeException(ErrorMessages.TestExecutorErrorMessages.IoFailed, e);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            markExecutionFailed(executionId, status, startTime, String.format(ErrorMessages.TestExecutorErrorMessages.InterruptedFormat, e.getMessage()));
+            throw new RuntimeException(ErrorMessages.TestExecutorErrorMessages.Interrupted, e);
+        } catch (Exception e) {
+            markExecutionFailed(executionId, status, startTime, String.format(ErrorMessages.TestExecutorErrorMessages.ExecutionFailedFormat, e.getMessage()));
+            throw new RuntimeException(ErrorMessages.TestExecutorErrorMessages.ExecutionFailed, e);
+        }
+    }
+
+    private List<String> buildMavenCommand(String testClassName, String testMethodFilter) {
+        List<String> command = new ArrayList<>();
+        command.add("mvn");
+        command.add("test");
+        command.add("-Dsurefire.useFile=false");
+        command.add("-DtrimStackTrace=false");
+        if (testClassName != null) {
+            if (testMethodFilter != null) {
+                command.add("-Dtest=" + testClassName + "#" + testMethodFilter);
+            } else {
+                command.add("-Dtest=" + testClassName);
+            }
+        }
+        return command;
+    }
+
+    private void markExecutionFailed(String executionId, TestExecutionStatusModel status, long startTime, String message) {
+        status.setStatus("FAILED");
+        status.setErrorMessage(message);
+        status.setCompletedAt(LocalDateTime.now());
+        status.setDurationMs(System.currentTimeMillis() - startTime);
+        runningProcesses.remove(executionId);
+    }
+
+    /**
+     * Locates the Spring API project directory (containing pom.xml and src/test/java).
+     * Checks current dir, SpringApi subdir, and parent directories.
+     */
+    private Path findProjectDirectory() {
+        Path currentDir = Paths.get(System.getProperty("user.dir"));
+
+        if (Files.exists(currentDir.resolve("pom.xml")) && Files.exists(currentDir.resolve("src/test/java"))) {
+            return currentDir;
+        }
+
+        Path springApiDir = currentDir.resolve("SpringApi");
+        if (Files.exists(springApiDir.resolve("pom.xml"))) {
+            return springApiDir;
+        }
+
+        Path parent = currentDir.getParent();
+        if (parent != null) {
+            Path parentSpringApi = parent.resolve("SpringApi");
+            if (Files.exists(parentSpringApi.resolve("pom.xml"))) {
+                return parentSpringApi;
+            }
+        }
+
+        return currentDir;
+    }
+
+    /**
+     * Parses a single Maven output line for "Tests run: X, Failures: Y..." and updates status.
+     */
+    private void parseTestOutput(String line, TestExecutionStatusModel status) {
+        Matcher runMatcher = TESTS_RUN_PATTERN.matcher(line);
+        if (runMatcher.find()) {
+            int testsRun = Integer.parseInt(runMatcher.group(1));
+            int failures = Integer.parseInt(runMatcher.group(2));
+            int errors = Integer.parseInt(runMatcher.group(3));
+            int skipped = Integer.parseInt(runMatcher.group(4));
+
+            status.setCompletedTests(status.getCompletedTests() + testsRun);
+            status.setPassedTests(status.getPassedTests() + testsRun - failures - errors - skipped);
+            status.setFailedTests(status.getFailedTests() + failures + errors);
+            status.setSkippedTests(status.getSkippedTests() + skipped);
+
+            if (status.getTotalTests() < status.getCompletedTests()) {
+                status.setTotalTests(status.getCompletedTests());
+            }
+            return;
+        }
+
+        Matcher classMatcher = RUNNING_TEST_CLASS_PATTERN.matcher(line);
+        if (classMatcher.find()) {
+            status.setStatus("RUNNING");
+        }
+    }
+
+    /**
+     * Parses Surefire XML reports in target/surefire-reports for detailed test results.
+     */
+    private void parseSurefireReports(TestExecutionStatusModel status, Path projectDir, String testClassName) {
+        Path surefireDir = projectDir.resolve("target/surefire-reports");
+        if (!Files.exists(surefireDir)) {
+            return;
+        }
+
+        try {
+            Files.list(surefireDir)
+                    .filter(p -> p.toString().endsWith(".xml"))
+                    .filter(p -> testClassName == null || p.getFileName().toString().contains(testClassName))
+                    .forEach(xmlFile -> parseXmlReport(xmlFile, status));
+        } catch (IOException e) {
+            throw new RuntimeException(ErrorMessages.TestExecutorErrorMessages.FailedToListSurefireReports, e);
+        }
+    }
+
+    /**
+     * Parses a single Surefire XML report file and populates test results.
+     */
+    private void parseXmlReport(Path xmlFile, TestExecutionStatusModel status) {
+        try {
+            String content = Files.readString(xmlFile);
+
+            Pattern testcasePattern = Pattern.compile(
+                    "<testcase\\s+name=\"([^\"]+)\"[^>]*classname=\"([^\"]+)\"[^>]*time=\"([^\"]+)\"[^>]*(?:/>|>([\\s\\S]*?)</testcase>)",
+                    Pattern.MULTILINE
+            );
+
+            Matcher matcher = testcasePattern.matcher(content);
+            while (matcher.find()) {
+                String testName = matcher.group(1);
+                double timeSeconds = Double.parseDouble(matcher.group(3));
+                String innerContent = matcher.group(4);
+
+                TestExecutionStatusModel.TestResultInfo result = new TestExecutionStatusModel.TestResultInfo();
+                result.setTestMethodName(testName);
+                result.setDurationMs((long) (timeSeconds * 1000));
+
+                if (testName.contains("_")) {
+                    result.setMethodName(testName.substring(0, testName.indexOf("_")));
+                }
+
+                if (innerContent != null && (innerContent.contains("<failure") || innerContent.contains("<error"))) {
+                    result.setStatus("FAILED");
+                    Pattern messagePattern = Pattern.compile("message=\"([^\"]+)\"");
+                    Matcher msgMatcher = messagePattern.matcher(innerContent);
+                    if (msgMatcher.find()) {
+                        result.setErrorMessage(msgMatcher.group(1));
+                    }
+                    Pattern stackPattern = Pattern.compile(">([^<]+)</(failure|error)>");
+                    Matcher stackMatcher = stackPattern.matcher(innerContent);
+                    if (stackMatcher.find()) {
+                        result.setStackTrace(stackMatcher.group(1).trim());
+                    }
+                } else if (innerContent != null && innerContent.contains("<skipped")) {
+                    result.setStatus("SKIPPED");
+                } else {
+                    result.setStatus("PASSED");
+                }
+
+                boolean exists = status.getResults().stream()
+                        .anyMatch(r -> r.getTestMethodName().equals(testName));
+                if (!exists) {
+                    status.getResults().add(result);
+                }
+            }
+
+            status.updateTotalsFromResults();
+
+        } catch (IOException e) {
+            throw new RuntimeException(String.format(ErrorMessages.TestExecutorErrorMessages.FailedToParseSurefireReportFormat, xmlFile.getFileName()), e);
+        }
     }
 
     // ==================== PRIVATE HELPER METHODS ====================
